<resources>
    <string name="app_name">Cüzdan</string>
    <string name="title_home">Ana Sayfa</string>
    <string name="title_reports">Raporlar</string>
    <string name="title_assets">Varlıklarım</string>
    <string name="title_markets">Piyasalar</string>
    <string name="title_settings">İşlemler</string>
    <string name="settings_subheader">Hesabını ve uygulama tercihnerini yönet</string>
    <string name="settings_notifications">Bildirimler</string>
    <string name="settings_currency">Para Birimi</string>
    <string name="settings_language">Dil</string>
    <string name="settings_dark_theme">Koyu Tema</string>
    <string name="settings_biometrics">Biyometrik Giriş</string>
    <string name="settings_device_management">Hesap Sıfırlama</string>
    <string name="settings_faq">SSS</string>
    <string name="settings_support">Destek</string>
    <string name="settings_recommend">Arkadaşına Öner</string>
    <string name="settings_agreement">Kullanıcı Sözleşmesi</string>
    <string name="settings_legal">Yasal Uyarılar</string>
    <string name="settings_account_reset">Hesabı Sıfırla</string>
    <string name="dialog_support_title">Destek Talebi</string>
    <string name="support_email_hint">E-posta Adresiniz</string>
    <string name="support_message_hint">Mesajınız</string>
    <string name="support_send">Gönder</string>
    <string name="dialog_cancel">İptal</string>
    <string name="dialog_confirm">Onayla</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.yusufulgen.cuzdan</string>
    <string name="user_agreement_text"><![CDATA[
<b>Cüzdan Uygulaması Kullanıcı Sözleşmesi</b><br/><br/>
<b>1. Hizmet Kapsamı</b><br/>Bu uygulama, varlıklarınızı takip etmeniz için finansal bir araç sunar.<br/><br/>
<b>2. Veri Güvenliği</b><br/>Tüm verileriniz yerel cihazınızda saklanır. Uygulama geliştiricisi, cihazınızdaki veri kaybından sorumlu değildir.<br/><br/>
<b>3. Sorumluluk Reddi</b><br/>Sunulan veriler bilgilendirme amaçlıdır; yatırım tavsiyesi değildir. Finansal kararlarınızın sorumluluğu tamamen size aittir.<br/><br/>
<b>4. Güncellemeler</b><br/>Uygulama sahibi, sözleşme şartlarını dilediği zaman güncelleme hakkını saklı tutar.
    ]]></string>
    <string name="legal_warning_text">Yasal Uyarı: Bu uygulama üzerinden sunulan hiçbir veri, grafik veya analiz yatırım danışmanlığı kapsamında değildir. Piyasa verileri gecikmeli olabilir. İşlem yapmadan önce lütfen lisanslı bir finansman uzmanına danışınız.</string>
    <string name="login_description">Varlıklarınıza güvenli erişim için lütfen biyometrik doğrulama yapın.</string>
    <string name="faq_title">SSS</string>
    <string name="faq_q1">Cüzdan uygulaması nedir?</string>
    <string name="faq_a1">Cüzdan, tüm finansal varlıklarınızı (altın, borsa, kripto) tek bir noktadan takip etmenizi sağlayan profesyonel bir portföy yönetim aracıdır.</string>
    <string name="faq_q2">Verilerim nerede saklanıyor?</string>
    <string name="faq_a2">Gizliliğinize önem veriyoruz. Tüm verileriniz sunucularımızda değil, yalnızca kendi cihazınızdaki güvenli veritabanında saklanır.</string>
    <string name="agreement_checkbox_text">Kullanıcı Sözleşmesini ve Gizlilik Politikasını okudum, kabul ediyorum.</string>
    <string name="button_accept">Kabul Et ve Devam Et</string>
    <string name="reset_warning_title">Hesabı Sıfırla</string>
    <string name="reset_warning_message">Hesabınızı sıfırlamak istediğinize emin misiniz? Bu işlem sonucunda tüm portföyleriniz ve varlıklarınız GERİ DÖNDÜRÜLEMEZ şekilde silinecektir.</string>
    <string name="nav_assets">Varlıklar</string>
    <string name="nav_reports">Raporlar</string>
    <string name="nav_wallet">Cüzdan</string>
    <string name="nav_markets">Piyasalar</string>
    <string name="nav_settings">İşlemler</string>
    <string name="nav_alerts">Alarmlar</string>
    <string name="nav_add_asset">Varlık Ekle</string>
    <string name="nav_select_asset">Varlık Seç</string>
    <string name="nav_profit_loss_chart">Kar/Zarar Grafiği</string>
    <string name="label_daily_change">GÜNLÜK DEĞİŞİM</string>
    <string name="label_daily_profit_loss">GÜNLÜK KÂR/ZARAR</string>
    <string name="label_total_profit_loss">TOPLAM KÂR/ZARAR</string>
    <string name="label_distribution">Dağılım</string>
    <string name="label_profit_loss">Kar/Zarar</string>
    <string name="total_portfolios">Portföyler Toplamı</string>
    <string name="title_alerts">Alarmlar</string>
    <string name="tab_active_alerts">Aktif</string>
    <string name="tab_triggered_alerts">Pasif</string>
    <string name="empty_active_alerts">Aktif alarm yok.</string>
    <string name="empty_triggered_alerts">Pasif alarm yok.</string>
    <string name="asset_type_crypto">Kripto</string>
    <string name="asset_type_stocks">Borsa</string>
    <string name="asset_type_currency">Döviz</string>
    <string name="asset_type_commodity">Emtia</string>
    <string name="asset_type_cash">Nakit</string>
    <string name="asset_type_fund">Fon</string>
    <string name="label_enter_asset">Varlık Gir</string>
    <string name="label_amount">Miktar</string>
    <string name="label_unit">Adet</string>
    <string name="label_unit_cost_optional">Birim Maliyet (Opsiyonel)</string>
    <string name="btn_save">KAYDET</string>
    <string name="range_7_days">7 Gün</string>
    <string name="range_1_month">1 Ay</string>
    <string name="asset_search_hint">Varlık ara…</string>
    <string name="subheader_select_asset">Portföyüne eklemek istediğin varlığı seç</string>
    <string name="total_portfolios_warning_title">Yeni Portföy Açmalısınız</string>
    <string name="total_portfolios_warning_message">Varlık ekleyebilmek için önce bir portföy oluşturmalısınız. Ana sayfada sağ üst köşede bulunan " + " simgesini kullanabilirsiniz.</string>
    <string name="error_loading">Yükleme hatası</string>
    <string name="filter_all">Hepsi</string>
    <string name="title_select_currency">Para Birimi Seç</string>
    <string name="currency_try">Türk Lirası (₺)</string>
    <string name="currency_usd">Amerikan Doları ($)</string>
    <string name="currency_eur">Euro (€)</string>
    <string name="currency_gbp">İngiliz Sterlini</string>
    <string name="currency_chf">İsviçre Frangı</string>
    <string name="currency_jpy">Japon Yeni</string>
    <string name="currency_aud">Avustralya Doları</string>
    <string name="currency_cad">Kanada Doları</string>
    <string name="commodity_gold">Altın</string>
    <string name="commodity_gold_oz">Altın (Ons)</string>
    <string name="commodity_gram_gold">Gram Altın</string>
    <string name="commodity_silver">Gümüş</string>
    <string name="commodity_copper">Bakır</string>
    <string name="commodity_platinum">Platin</string>
    <string name="commodity_palladium">Paladyum</string>
    <string name="asset_title_template">%1$s Varlıkları</string>
    <string name="error_prefix">Hata</string>
    <string name="label_turkish">Türkçe</string>
    <string name="label_english">İngilizce</string>
    <string name="sort_name_asc">İsim (A-Z)</string>
    <string name="sort_name_desc">İsim (Z-A)</string>
    <string name="sort_price_asc">Fiyat (Düşükten Yükseğe)</string>
    <string name="sort_price_desc">Fiyat (Yüksekten Düşüğe)</string>
    <string name="sort_change_asc">Değişim (En Çok Düşen)</string>
    <string name="sort_change_desc">Değişim (En Çok Artan)</string>
    <string name="alert_title">Fiyat Alarmı Kur</string>
    <string name="alert_current_price">Güncel Fiyat</string>
    <string name="alert_target_price">Hedef Fiyat</string>
    <string name="alert_condition">Alarm Koşulu</string>
    <string name="alert_above">ÜSTÜNE ÇIKINCA</string>
    <string name="alert_below">ALTINA DÜŞÜNCE</string>
    <string name="alert_equals">EŞİTLENİNCE</string>
    <string name="alert_save">ALARM KUR</string>
    <string name="alert_error_price">Fiyat giriniz</string>
    <string name="alert_error_invalid">Geçersiz fiyat</string>
    <string name="detail_title">Varlık Detayı</string>
    <string name="detail_portfolio_prefix">Portföy: %1$s</string>
    <string name="detail_quantity_cost">Miktar ve Maliyet</string>
    <string name="detail_transaction_amount">İşlem Miktarı</string>
    <string name="detail_held_amount">Eldeki: %1$s</string>
    <string name="detail_unit_cost_optional">Birim Maliyet (Opsiyonel)</string>
    <string name="detail_buy">ALIŞ (EKLE)</string>
    <string name="detail_sell">SATIŞ (AZALT)</string>
    <string name="detail_save">KAYDET</string>
    <string name="detail_unit">Adet</string>
    <string name="support_subject">Destek Talebi</string>
    <string name="support_email_chooser">E-posta gönder…</string>
    <string name="support_fill_all_fields">Lütfen tüm alanları doldurun.</string>
    <string name="support_share_text">Cüzdan uygulamasını denemelisin! %1$s</string>
    <string name="label_heatmap_page_title">Kâr/Zarar Isı Haritası</string>
    <string name="label_daily_change_header">GÜNLÜK DEĞİŞİM</string>
    <string name="portfolio_add_title">Yeni Portföy</string>
    <string name="portfolio_name_hint">Portföy Adı</string>
    <string name="portfolio_include_total">Portföyler Toplamına Dahil Et</string>
    <string name="label_profit_loss_chart">Kar/Zarar Değişimi</string>
    <string name="label_total_portfolios_sub">Portföyler Toplamı</string>
    <string name="period_7_days">Son 7 Gün</string>
    <string name="period_1_month">Son 1 Ay</string>
    <string name="period_all_time">Tüm Zamanlar</string>
    <string name="period_custom">Özel Tarih Aralığı</string>
    <string name="dialog_select_period">Tarih Aralığı Seçin</string>
    <string name="my_portfolios">Portföylerim</string>
    <string name="agreement_not_accepted">Lütfen sözleşmeyi kabul edin.</string>
    <string name="agreement_must_accept_exit_warning">Uygulamayı kullanmak için sözleşmeyi kabul etmeniz gerekmektedir. Kabul etmeden çıkmak uygulamayı kapatacak.</string>
    <string name="agreement_exit_confirm">Çıkışı Onayla</string>
    <string name="agreement_go_back">Geri Dön</string>
    <string name="agreement_exit">Uygulamadan Çık</string>
    <string name="deposit_btn_label">Para Yatır / Çek</string>
    <string name="deposit_title">Para Yatır</string>
    <string name="deposit_subtitle">Bu işlem kar/zarar hesaplamalarını etkilemez</string>
    <string name="deposit_add">Yatır</string>
    <string name="deposit_withdraw">Çek</string>
    <string name="deposit_amount_label">Tutar</string>
    <string name="deposit_current_invested">Yatırılan Sermaye (TL)</string>
    <string name="deposit_confirm">YATIR</string>
    <string name="deposit_success">Para yatırma işlemi başarılı</string>
    <string name="deposit_error_empty">Tutar girin</string>
    <string name="deposit_error_invalid">Geçersiz tutar</string>
    <string name="deposit_error_positive">Tutar 0\'dan büyük olmalı</string>
    <string name="deposit_error_total_mode">Portföyler toplamında işlem yapılamaz</string>
    <string name="withdraw_title">Para Çek</string>
    <string name="cash_demand_deposit_desc">Vadesiz mevduatta faiz oranı bankaya göre değişir. Daha gerçekçi hesap için oran, stopaj ve başlangıç tarihi girebilirsiniz.</string>
    <string name="cash_bes_desc">Basit BES modeli: toplam katkı + devlet katkısı + yıllık bileşik getiri ile tahmini değer hesaplanır (hak ediş/limitler hesaba katılmaz).</string>
    <string name="cash_input_principal_try">Yatırılan TL</string>
    <string name="cash_input_start_date">Başlangıç tarihi (yyyy-MM-dd)</string>
    <string name="cash_input_annual_net_rate_optional">Yıllık faiz oranı (%)</string>
    <string name="cash_input_stopaj_rate_optional">Stopaj oranı (%)</string>
    <string name="cash_input_years">Süre (yıl)</string>
    <string name="cash_input_annual_return_rate">Yıllık getiri oranı (%)</string>
    <string name="cash_input_state_contribution_rate">Devlet katkısı oranı (%)</string>
    <string name="cash_result_placeholder">Sonuç burada görünecek.</string>
</resources>